--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -530,6 +530,9 @@
   margin-top:-0.1rem
 }
 
+#main_body .routine_card .rc_inner p.se_date {
+  line-height:1rem
+}
 
 #main_body .routine_card.vlist .state_button.check {
   margin-right:4rem;
