--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -2,7 +2,7 @@
   height: calc(var(--vh, 1vh) * 100);
   display: flex;
   flex-direction: column;
-  --lnb-w:280px; 
+  --lnb-w:80%; 
   position:relative; 
   overflow-x:hidden;
 }
@@ -25,7 +25,6 @@
   padding: 2rem;
   z-index: 1200;
   overflow-y: auto;
-  border-right:1px solid #aaa;
 }
 
 .lnb_dim {
