--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -150,7 +150,7 @@
   flex-grow: 1;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
-  padding:0rem 2rem 0 2rem;
+  padding:0.5rem 1.5rem 0.5rem 1.5rem;
   background-color:#fafafa;
   flex:1;
   display:flex;
